--- a/style.css
+++ b/style.css
@@ -164,12 +164,19 @@ object {
 }
 
 /* Navigation */
+.navbar{
+    border-top:4px;
+    border-left:0px;
+    border-right: 0px;
+    border-bottom: 0px;
+}
+
 @media (min-width:768px){
     .navbar{
         border-top-right-radius: 0px;
         border-top-left-radius: 0px;
-        border-bottom-right-radius: 4px;
-        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 0px;
+        border-bottom-left-radius: 0px;
     }
 }
 nav div.container{
@@ -285,6 +292,15 @@ nav .form-control {
 	
 }
 
+#header_spacer{
+	height:5%;
+	width: 100%;
+	margin:0;
+	border: 0;
+	padding: 3%;
+	background-color: #651D32;
+}
+
 .header-img{
 	position: relative;
 	z-index: 10;
@@ -307,6 +323,8 @@ nav .form-control {
 		font-size: 0.7em;
 	}
 }
+
+
 /* Styles for the header carousel*/
 #header-carousel {
 	margin-top: -80px;
