--- a/style.css
+++ b/style.css
@@ -165,10 +165,12 @@ object {
 
 /* Navigation */
 .navbar{
-    border-top:4px;
+    border-top:3px solid #4b1625 !important;
     border-left:0px;
     border-right: 0px;
-    border-bottom: 0px;
+    border-bottom: 10px solid #4b1625 !important;
+    margin:0px !important;
+    /*padding-bottom: 20px !important;*/
 }
 
 @media (min-width:768px){
@@ -324,6 +326,12 @@ nav .form-control {
 	}
 }
 
+#story-carousel-row{
+	height:200px;
+	width:100%;
+	background-color: #4b1625;
+	padding:0px;
+}
 
 /* Styles for the header carousel*/
 #header-carousel {
