--- a/style.css
+++ b/style.css
@@ -44,6 +44,11 @@ Credits:
 /* This is a small security for too long strings titles */
 body {
 	word-wrap: break-word;
+  background-color: #e6e6e6;
+}
+
+.row{
+  background-color: #fafafa;
 }
 
 /* Alignment */
@@ -294,6 +299,12 @@ nav .form-control {
 
 }
 /* Extensions */
+
+.row {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
 #header_spacer{
   height:5%;
   width: 100%;
@@ -310,20 +321,89 @@ nav .form-control {
 .site-branding{
   position:absolute;
   color: white;
-  top: 5%;
+  top: 10%;
   left:2px;
   z-index: 15;
 }
-@media (max-width: 1000px){
+
+.site-title, .site-description {
+  text-transform: uppercase;
+}
+
+.site-title{
+  font-size: 1.5em;
+}
+
+.site-description {
+  font-size: 1em;
+}
+
+.navbar-brand{
+  font-size:1.3em;
+}
+
+.menu-item{
+  font-size: 0.8em;
+}
+
+@media (max-width: 1150px){
   .site-branding{
-    width:50%;
+    width:70%;
     font-size: 0.9em;
   }
-}
-@media (max-width: 500px){
-  .lead{
+  .navbar-brand{
+    font-size: 1em;
+  }
+  .menu-item{
     font-size: 0.7em;
   }
+}
+
+@media (max-width: 1005px){
+  .navbar-brand{
+    font-size: 0.9em;
+  }
+  .menu-item{
+    font-size: 0.6em
+  }
+}
+
+@media (max-width: 910px){
+  .navbar-brand{
+    font-size: 0.8em;
+  }
+  .menu-item{
+    font-size: 0.5em;
+  }
+}
+
+@media (max-width: 768px){
+  .site-branding{
+    width:60%;
+    font-size:0.75em;
+  }
+  .navbar-brand{
+    font-size: 1.3em;
+  }
+  .menu-item{
+    font-size: 0.8em;
+  }
+}
+
+@media (max-width: 550px){
+  .site-branding{
+    width:50%;
+    font-size:0.6em;
+  }
+}
+
+.navbar-brand, .menu-item{
+  text-transform: uppercase;
+}
+
+.dropdown-menu > li{
+  text-transform: capitalize;
+  font-size: 1em;
 }
 
 .content-inner-row {
@@ -352,7 +432,7 @@ nav .form-control {
 
 .carousel-row{
   height: 100px;
-  padding-top:20px;
+  padding-top:15px;
   padding-bottom: 10px;
   margin-left: 2px;
   margin-right:2px;
@@ -376,6 +456,7 @@ nav .form-control {
   width:  20px;
   position: absolute;
   left:0px;
+  margin-top: 15px;
 }
 
 .active > .carousel-indicator{
@@ -388,32 +469,107 @@ nav .form-control {
   font-size: 1em;
   width:80%;
   position:absolute;
-  right:0px;
+  right:5px;
   left: auto;
   text-align: right;
+  margin-top: 10px;
+}
+
+@media(max-width: 992px){
+  .carousel-headline{
+    font-size:0.9em;
+  }
+}
+
+@media(max-width: 850px){
+  .carousel-headline{
+    font-size: 0.8em;
+  }
 }
 
 .carousel-row:hover .carousel-headline{
   text-decoration: underline;
 }
 
-.sticky-posts {
+#sticky-posts {
   position: absolute;
   top: 0;
   bottom:0;
   right:0;
   left:auto;
   height:100%;
-  width:20%;
+  width:25%;
   background-color: rgba(0,0,0,0.95);
   color: #ffffff;
   text-align: center;
 }
 
-.bullet {
-  width:10px;
-  height:10px;
-  border: 2px solid #651D32;
+@media(max-width: 768px){
+  .carousel-row{
+    border-top:0;
+    border-bottom: 0;
+    display: inline-block;
+    width:30%;
+  }
+  .carousel-row:nth-of-type(1){
+    border-top:0;
+    float:left;
+  }
+  .carousel-row:nth-of-type(2){
+    display: inline-block;
+    margin: 0 auto;
+  }
+  .carousel-row:nth-of-type(3){
+    float:right;
+  }
+  #sticky-posts{
+    top:auto;
+    height:115px;
+    width: 100%;
+  }
+  #sticky-posts h3{
+    margin-bottom: 0px;
+    margin-top: 5px;
+    /*border-bottom: 1px solid white;*/
+  }
+  .carousel-controls{
+    text-align: center;
+  }
+  .carousel-indicator{
+    position: static;
+    display: inline-block;
+    margin-top:0px;
+  }
+  .carousel-headline{
+    position: static;
+    display: inline;
+    width: auto;
+    margin-top:0px;
+  }
+  .carousel-caption{
+    bottom: 125px;
+  }
+}
+
+.no-padded-col {
+  padding: 0px;
+}
+
+.content-inner-row .panel{
+  border: 0px;
+  border-radius: 0px;
+  background-color: #fafafa;
+  box-shadow: none;
+}
+
+.content-inner-row .panel-heading{
+  border-top-right-radius: 0px;
+  border-top-left-radius: 0px;
+}
+
+.panel-body{
+  padding-top:15px;
+  padding-bottom:0px;
 }
 
 .odd{
@@ -428,13 +584,46 @@ nav .form-control {
   color:#ffffff;
 }
 
-.equal, .equal > div[class*='col-'] {
+/*.equal, .equal > div[class*='col-'] {
   display: -webkit-flex;
   display: flex;
   flex:1 1 max-content;
   flex-wrap: wrap;
+}*/
+
+.thumbnail{
+  border-radius: 0px;
+  padding: 0px;
+}
+
+.thumbnail .caption  {
+  position:absolute;
+  width: 100%;
+  top:0;
+  background: #000;
+  background: linear-gradient(to bottom, #000 40%, rgba(0, 0, 0, 0) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+}
+
+.caption >p {
+  color: #fff;
+  padding:0;
+  margin:0;
 }
 
 .news-thumb{
   height:200px!important;
+  width:100%;
+}
+
+.embed-responsive{
+  margin-bottom: 10px;
+}
+
+.site-footer-inner {
+  height:100px;
+  background-color: #4b1625;
+}
+
+.site-footer-inner a{
+  color:#fff;
 }
